--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@mui/x-charts": "^6.18.4",
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
